# rustdoc-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  tools_schema.json
.github/workflows/: ci.yaml  release.yml
src/: doc_ref.rs  filter.rs  format_context.rs  indent.rs  indexer.rs  iterators.rs  main.rs  request.rs  rustdoc.rs  server.rs  state.rs  string_utils.rs  tests.rs  tools.rs  traits.rs  verbosity.rs  workspace_tests.rs
src/request/: formatting.rs
src/rustdoc/: crate_name.rs
src/snapshots/: rustdoc_json_mcp__tests__fuzzy_matching_tool_execute.snap  rustdoc_json_mcp__tests__fuzzy_matching_trait_methods.snap  rustdoc_json_mcp__tests__get_constants.snap  rustdoc_json_mcp__tests__get_external_crate.snap  rustdoc_json_mcp__tests__get_function_details.snap  rustdoc_json_mcp__tests__get_module.snap  rustdoc_json_mcp__tests__get_std_vec.snap  rustdoc_json_mcp__tests__get_struct_details.snap  rustdoc_json_mcp__tests__get_struct_with_private_fields.snap  rustdoc_json_mcp__tests__get_submodule.snap  rustdoc_json_mcp__tests__get_unit_struct.snap  rustdoc_json_mcp__tests__hide_docs_flag.snap  rustdoc_json_mcp__tests__method_filtering.snap  rustdoc_json_mcp__tests__nonexistent_item.snap  rustdoc_json_mcp__tests__recursive_filtering.snap  rustdoc_json_mcp__tests__recursive_multiple_filters.snap  rustdoc_json_mcp__tests__recursive_submodule_listing.snap  rustdoc_json_mcp__tests__set_working_directory.snap  rustdoc_json_mcp__tests__verbosity_minimal.snap  rustdoc_mcp__tests__fuzzy_matching_suggestions.snap  rustdoc_mcp__tests__get_complex_trait_details.snap  (+28 more)
(+22 files in other folders)
