[package]
name = "rustdoc-mcp"
version = "0.1.2"
edition = "2024"
description = "mcp server for rustdocs"
readme = "README.md"
repository = "https://github.com/jbr/rustdoc-mcp"
documentation = "https://docs.rs/rustdoc-mcp"
license = "MIT OR Apache-2.0"
keywords = ["mcp"]
categories = []


[dependencies]
anyhow = "1.0.98"
cargo_metadata = "0.21.0"
cargo_toml = "0.22.1"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
elsa = "1.11.2"
env_logger = "0.11.8"
fieldwork = "0.4.6"
log = "0.4.27"
mcplease = "0.2.3"
rustdoc-types = { version = "0.54.0", features = ["rustc-hash"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
shellexpand = "3.1.1"
strsim = "0.11.1"
strum = { version = "0.27.2", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
insta = { version = "1.43", features = ["yaml"] }
